# polaris-pdf-api

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  README.md  pyproject.toml  run_local.sh  tox.ini
.circleci/: config.yml  run_integration_tests.sh
dhos_pdf_api/: app.py  config.py  trustomer.py
dhos_pdf_api/blueprint_api/: __init__.py  controller.py  helpers.py  hl7_cda.py  send_ward_report.py
dhos_pdf_api/helper/: cli.py
dhos_pdf_api/models/: api_spec.py  dbm_patient.py  diabetes_patient.py  filename_lookup.py  pregnancy.py  send_pdf_data.py  trustomer_config.py
dhos_pdf_api/openapi/: openapi.yaml
dhos_pdf_api/schema/processable/coreschemas/: datatypes.xsd  infrastructureRoot.xsd  voc.xsd
dhos_pdf_api/templates/: dbm_patient.html  gdm_181_patient.html
docs/: make_schema.py  schema.dot  schema.plantuml
integration-tests/: Makefile  README.md  docker-compose.yml  environment.py  reporting.py  requirements.txt
integration-tests/clients/: dhos_pdf_client.py
integration-tests/features/: dbm_pdf.feature  gdm_pdf.feature  send_pdf.feature  ward_reports.feature
integration-tests/helpers/: dbm_patient_helper.py  gdm_patient_helper.py  send_patient_helper.py  ward_report_helper.py
integration-tests/steps/: common_steps.py  dbm_pdf_steps.py  gdm_pdf_steps.py  send_pdf_steps.py  ward_reports_steps.py
migrations/: env.py
migrations/versions/: 2344c8a35859_filename_lookup.py  7b19ac1c5b8e_rename_column.py
tests/: conftest.py  test_api.py  test_cda.py  test_controller.py  test_helpers.py  test_openapi.py  test_pdf_stream.py  test_schema.py  test_send_ward_report.py  test_trustomer.py
tests/sample_data/: dbm_pdf_post.json  gdm_pdf.json  gdm_pdf_handled.json  send_pdf.json  send_pdf_cda_post.json  send_pdf_post.json  send_pdf_schema.json
tests/sample_data/send_ward_report/: sample_metric_data.json  sample_metric_data_with_zeroes.json
